# minkowski

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  codespeak.json  plan.md
.cargo/: config.toml
.claude/commands/: perf-shakedown.md  pr.md  self-audit.md  soundness-audit.md  validate-macro.md
.claude/commands/minkowski/: concurrency.md  index.md  model.md  mutate.md  optimize.md  persist.md  python.md  query.md  reducer.md
.claude/skills/: minkowski-guide.md  minkowski-python.md
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  miri.yml
ci/: miri-subset.txt  run-miri-subset.sh
crates/minkowski/: Cargo.toml
crates/minkowski-bench/: Cargo.toml
crates/minkowski-bench/benches/: add_remove.rs  changeset_micro.rs  fragmented_iter.rs  heavy_compute.rs  planner.rs  reducer.rs  schedule.rs  serialize.rs  simple_insert.rs  simple_iter.rs
crates/minkowski-bench/examples/: profile_query_writer.rs
crates/minkowski-bench/src/: lib.rs
crates/minkowski-derive/: Cargo.toml
crates/minkowski-derive/src/: lib.rs
crates/minkowski-lsm/: Cargo.toml
crates/minkowski-lsm/src/: bloom.rs  codec.rs  compaction_writer.rs  compactor.rs  error.rs  format.rs  lib.rs  manifest.rs  manifest_log.rs  manifest_ops.rs  reader.rs  schema.rs  schema_match.rs  types.rs  writer.rs
crates/minkowski-lsm/tests/: compaction_integration.rs  integration.rs  manifest_integration.rs
crates/minkowski-observe/: Cargo.toml
crates/minkowski-observe/src/: diff.rs  prometheus.rs  snapshot.rs
crates/minkowski-persist/: Cargo.toml
crates/minkowski-persist/benches/: persist.rs
crates/minkowski-persist/src/: blob.rs  checkpoint.rs  codec.rs  durable.rs  format.rs  index.rs  lib.rs  record.rs  replication.rs  slotted_page.rs  snapshot.rs  wal.rs
crates/minkowski-py/: Cargo.toml  pyproject.toml
crates/minkowski-py/notebooks/: boids.ipynb  circuit.ipynb  flatworm.ipynb  life.ipynb  nbody.ipynb  quickstart.ipynb
crates/minkowski-py/python/minkowski_py/: __init__.py
crates/minkowski-py/src/: bridge.rs  circuit.rs  components.rs  lib.rs  pyregistry.rs  pyworld.rs  reducers.rs  schema.rs  spatial.rs
crates/minkowski/benches/: add_remove.rs  fragmented.rs  iterate.rs  parallel.rs  reducer.rs  spawn.rs
crates/minkowski/examples/: boids.rs  life.rs  nbody.rs
crates/minkowski/src/: access.rs  blob.rs  bundle.rs  changeset.rs  command.rs  component.rs  entity.rs  index.rs  lib.rs  lock_table.rs  planner.rs  pool.rs  reducer.rs  retention.rs  sync.rs  table.rs  tick.rs  transaction.rs  view.rs  world.rs
crates/minkowski/src/planner/: aggregate.rs  builder.rs  cost.rs  error.rs  mod.rs  predicate.rs  tests.rs
crates/minkowski/src/query/: fetch.rs  iter.rs  mod.rs
crates/minkowski/src/query/planner/: aggregate.rs  exec.rs  mod.rs  node.rs  predicate.rs  scratch.rs  table.rs  traits.rs
crates/minkowski/src/storage/: archetype.rs  blob_vec.rs  dirty_pages.rs  mod.rs  sparse.rs
crates/minkowski/tests/: changeset_external.rs  loom_concurrency.rs
docs/: glossary.md  indexing.md  memory-management.md  perf-roadmap.md  performance.md  queries.md  reducer-correctness.md
docs/adr/: 001-column-oriented-archetype-storage.md  002-table-derive-macro.md  003-change-detection-via-tick-tracking.md  004-mutation-strategies.md  005-spatial-index-trait.md  006-query-conflict-detection.md  007-split-phase-transactions.md  008-wal-snapshot-persistence.md  009-typed-reducer-system.md  010-ai-assisted-developer-tooling.md  011-btree-hash-column-indexes.md  012-batch-point-lookups.md  013-rkyv-zero-copy-snapshots.md  014-pyo3-arrow-bridge.md
docs/plans/: 2026-02-26-phase1-ecs-core-design.md  2026-02-26-phase1-ecs-core-plan.md  2026-02-27-boids-sim-plan.md  2026-02-27-derive-table-design.md  2026-02-27-derive-table-plan.md  2026-02-28-boids-spatial-grid-design.md  2026-02-28-boids-spatial-grid-plan.md  2026-02-28-changeset-plan.md  2026-02-28-changeset-typed-api-design.md  2026-02-28-chunk-iteration-design.md  2026-02-28-chunk-iteration-plan.md  2026-02-28-game-of-life-plan.md  2026-02-28-query-cache-plan.md  2026-03-01-battle-example-design.md  2026-03-01-battle-example-plan.md  2026-03-01-ci-status-checks-design.md  2026-03-01-ci-status-checks-plan.md  2026-03-01-transaction-semantics-design.md  2026-03-01-transaction-semantics-plan.md  2026-03-02-persistence-design.md  2026-03-04-dynamic-reducers-design.md  2026-03-05-documentation-uplift-design.md  2026-03-05-extended-reducers-impl.md  2026-03-05-minkowski-skills-design.md  2026-03-05-minkowski-skills-impl.md  2026-03-06-batch-point-lookups-impl.md  2026-03-06-btree-hash-indexes-design.md  2026-03-06-btree-hash-indexes-impl.md  2026-03-06-documentation-uplift-impl.md  2026-03-06-rkyv-zero-copy-snapshots.md  2026-03-06-tactical-replication-design.md  2026-03-06-tactical-replication-plan.md  2026-03-06-volcano-query-planner-design.md  2026-03-07-circuit-flatworm-notebooks-design.md  2026-03-07-observability-design.md  2026-03-07-observability-impl.md  2026-03-07-python-ecs-bridge-plan.md  2026-03-07-python-spatial-notebooks-design.md  2026-03-07-replication-impl.md  2026-03-07-sparse-set-batched-despawn-design.md  (+36 more)
docs/superpowers/plans/: 2026-03-14-lock-free-slab-pool.md  2026-03-15-streaming-archetype-buffers.md  2026-03-16-join-batch-execution.md
docs/superpowers/specs/: 2026-03-14-batch-aggregate-design.md  2026-03-15-streaming-archetype-buffers-design.md  2026-03-16-direct-archetype-iteration-design.md  (+2 more)
examples/: Cargo.toml  README.md
examples/examples/: battle.rs  blob.rs  boids.rs  circuit.rs  flatworm.rs  index.rs  life.rs  materialized_view.rs  nbody.rs  observe.rs  persist.rs  planner.rs  pool.rs  profile_changeset.rs  reducer.rs  replicate.rs  retention.rs  scheduler.rs  tactical.rs  transaction.rs
examples/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  fuzz_reducers.rs  fuzz_snapshot_load.rs  fuzz_wal_replay.rs  fuzz_world_ops.rs
notebooks/: 01_boids.ipynb  02_nbody.ipynb  03_life.ipynb
