[package]
name = "minkowski-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
minkowski = { path = "../crates/minkowski" }
minkowski-persist = { path = "../crates/minkowski-persist" }
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
fastrand = "2"
rayon = "1"
