[package]
name = "minkowski-examples"
version = "1.0.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
minkowski = { path = "../crates/minkowski" }
minkowski-persist = { path = "../crates/minkowski-persist" }
minkowski-observe = { path = "../crates/minkowski-observe" }
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
fastrand = "2"
rayon = "1"
