[package]
name = "minkowski-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
minkowski = { path = "../minkowski" }
minkowski-persist = { path = "../minkowski-persist" }
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "simple_insert"
harness = false

[[bench]]
name = "simple_iter"
harness = false

[[bench]]
name = "fragmented_iter"
harness = false

[[bench]]
name = "heavy_compute"
harness = false

[[bench]]
name = "add_remove"
harness = false
