[package]
name = "minkowski-lsm"
version = "1.3.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
minkowski = { path = "../minkowski" }
crc32fast = "1"
memmap2 = "0.9"
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
thiserror = "2"

[dev-dependencies]
static_assertions = "1"
tempfile = "3"
