[package]
name = "minkowski-observe"
version = "1.0.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
minkowski = { path = "../minkowski" }
minkowski-persist = { path = "../minkowski-persist" }
prometheus-client = "0.24"

[dev-dependencies]
tempfile = "3"
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
