[package]
name = "minkowski-persist"
version = "1.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
minkowski = { path = "../minkowski" }
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
memmap2 = "0.9"
parking_lot = "0.12"
fixedbitset = "0.5"
thiserror = "2"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "persist"
harness = false
