[package]
name = "minkowski"
version = "1.0.1"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
fixedbitset = "0.5"
parking_lot = "0.12"
rayon = "1"
minkowski-derive = { path = "../minkowski-derive" }
loom = { version = "0.7", optional = true }
